--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>lp-poly</title>
+    <meta name="description" content="Poly - Mini Framework para jogos em C, Venha aprender a programar de forma leve e divertida!" />
   </head>
   <body>
     <div id="root"></div>
